[package]
name = "shellect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
crossterm = "0.26.0"
hex_color = { version = "2.0.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.1"
